package main

import (
	"context"
	"log"
	"net"

	rass "rastochnoy/genproto/rastochnoy"
	"rastochnoy/api"
	"rastochnoy/api/handler"
	"rastochnoy/config"
	connectiondb "rastochnoy/connection_db"
	"rastochnoy/service"
	writerastochnoy "rastochnoy/write_rastochnoy"

	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

func main() {
	// 1Ô∏è‚É£ Config yuklash
	cfg := config.Load()

	// 2Ô∏è‚É£ gRPC server uchun listener yaratish
	listener, err := net.Listen("tcp", cfg.USER_SERVICE)
	if err != nil {
		log.Fatal("‚ùå gRPC portni tinglashda xato:", err)
	}
	defer listener.Close()

	// 3Ô∏è‚É£ DB ulanish
	db, err := connectiondb.ConnectDB()
	if err != nil {
		log.Fatal("‚ùå DB ulanishda xato:", err)
	}

	// 4Ô∏è‚É£ Service yaratish
	crud := writerastochnoy.NewRastochnoyRepo(db)
	service := service.NewRastochnoyService(crud)

	// 5Ô∏è‚É£ gRPC serverni ishga tushirish
	server := grpc.NewServer()
	rass.RegisterRastochnoyServer(server, service)
	log.Printf("üöÄ gRPC server ishlayapti: %v", listener.Addr())

	go func() {
		if err := server.Serve(listener); err != nil {
			log.Fatal("‚ùå gRPC serverda xato:", err)
		}
	}()

	// 6Ô∏è‚É£ HTTP handler va router
	hand := NewHandler(cfg)
	router := api.RegisterRastochnoyRoutes(hand)

	// 7Ô∏è‚É£ WebSocket (DB37 / READ) uchun reader ulash
	writerastochnoy.InitRastochnoyWS(func(ctx context.Context, req *rass.ReadRastochnoyReq) (*rass.ReadRastochnoyRes, error) {
		return service.ReadRastochnoy(ctx, req)
	})

	// 8Ô∏è‚É£ WebSocket (DB9 / WRITE) uchun reader ulash
	writerastochnoy.InitRastochnoyWSDB9(func(ctx context.Context, req *rass.ReadWriteRastochnoyReq) (*rass.ReadWriteRastochnoyRes, error) {
		return service.ReadWriteRastochnoy(ctx, req)
	})

	// 10 WebSocket (DB33 / WRITE) uchun reader ulash
	writerastochnoy.InitRastochnoyWSdb33(func(ctx context.Context, req *rass.ReadWriteRastochnoyDB33Req) (*rass.ReadWriteRastochnoyDB33Res, error) {
		return service.ReadWriteRastochnoyDB33(ctx, req)
	})

	// 9Ô∏è‚É£ HTTP (REST + WebSocket) serverni ishga tushirish
	log.Printf("üåê HTTP + WebSocket server ishlayapti: %s", cfg.USER_ROUTER)
	if err := router.Run(cfg.USER_ROUTER); err != nil {
		log.Fatal("‚ùå HTTP serverda xato:", err)
	}
}

// gRPC client ulash (handler uchun)
func NewHandler(cfg config.Config) *handler.Handler {
	conn, err := grpc.Dial(cfg.USER_SERVICE, grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		log.Fatalf("‚ùå gRPC client ulanishida xato: %v", err)
	}

	return &handler.Handler{
		Rastochnoy: rass.NewRastochnoyClient(conn),
	}
}
