package writerastochnoy

import (
	"bytes"
	"context"
	"encoding/json"
	"log"
	"net/http"
	"sync"
	"time"

	"github.com/gin-gonic/gin"
	"github.com/gorilla/websocket"

	rass "rastochnoy/genproto/rastochnoy"
)

var (
	clients      = make(map[*websocket.Conn]bool)
	clientsMu    sync.Mutex
	lastSentData []byte

	upgrader = websocket.Upgrader{
		CheckOrigin: func(r *http.Request) bool { return true },
	}

	repoReader func(context.Context, *rass.ReadRastochnoyReq) (*rass.ReadRastochnoyRes, error)
)

// InitRastochnoyWS â€” DB reader funksiyasini biriktiradi
func InitRastochnoyWS(reader func(context.Context, *rass.ReadRastochnoyReq) (*rass.ReadRastochnoyRes, error)) {
	repoReader = reader
	go startPolling()
}

// WebSocketHandler â€” yangi clientni qabul qiladi
func WebSocketHandler(c *gin.Context) {
	conn, err := upgrader.Upgrade(c.Writer, c.Request, nil)
	if err != nil {
		log.Println("âŒ WebSocket ulanishida xato:", err)
		return
	}

	clientsMu.Lock()
	clients[conn] = true
	clientsMu.Unlock()

	log.Println("âœ… Yangi WebSocket client ulandi")

	// ğŸ”¥ Yangi clientga faqat bir marta toâ€˜liq ma'lumot yuboriladi
	if repoReader != nil {
		data, err := repoReader(context.Background(), &rass.ReadRastochnoyReq{})
		if err == nil {
			msg, _ := json.Marshal(data)
			conn.WriteMessage(websocket.TextMessage, msg)
		}
	}

	// Clientni kuzatish
	go func() {
		defer func() {
			clientsMu.Lock()
			delete(clients, conn)
			clientsMu.Unlock()

			conn.Close()
			log.Println("âš ï¸ Client uzildi")
		}()

		for {
			if _, _, err := conn.ReadMessage(); err != nil {
				break
			}
		}
	}()
}

// startPolling â€” DB dan oâ€˜zgarishlarni 100ms da tekshiradi
func startPolling() {
	ticker := time.NewTicker(100 * time.Millisecond)
	defer ticker.Stop()

	for range ticker.C {
		if repoReader == nil {
			continue
		}

		data, err := repoReader(context.Background(), &rass.ReadRastochnoyReq{})
		if err != nil {
			log.Println("Pollingda xato:", err)
			continue
		}

		message, err := json.Marshal(data)
		if err != nil {
			log.Println("JSON marshal xatosi:", err)
			continue
		}

		// ğŸ” Oâ€˜zgarish boâ€˜lmasa â€” yubormaymiz
		if bytes.Equal(message, lastSentData) {
			continue
		}

		// Yangi snapshotni saqlaymiz
		lastSentData = append([]byte(nil), message...)

		// ğŸ”¥ Faqat oâ€˜zgargan data broadcast qilinadi
		broadcast(message)
	}
}

// broadcast â€” barcha clientlarga yuborish
func broadcast(msg []byte) {
	clientsMu.Lock()
	defer clientsMu.Unlock()

	for conn := range clients {
		err := conn.WriteMessage(websocket.TextMessage, msg)
		if err != nil {
			log.Println("âŒ Clientga yuborishda xato:", err)
			conn.Close()
			delete(clients, conn)
		}
	}
}
